# o2scl

./: .gitignore  .travis.yml  .travis.yml.old  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  TODOS  acinclude.m4  auto_refresh.sh  autogen.sh  config.h.in  configure.ac  depcomp  gsl_diff.txt  integ_todo.txt  missing  o2scl.rb  package.scr  tc_temp.cpp  temp  todos_2023.txt  travis.temp
data/o2scl/: APR_cs01_feq.txt  Makefile.am  Rs_cs01_feq.txt  acol_docs.o2  apr98.o2  convert.scr  eos19.o2  eos21.o2  fermion_cal.o2  fermion_cal2.o2  fermion_deriv_cal.o2  fermion_nr_cal.o2  fmt49.o2  fp81.o2  gogny.o2  litable  mass_width_2008.csv  newton_J35.o2  newton_PNM.o2  nvbps.o2  o2scl.bib  o2scl_eos.bib  o2scl_old.bib  o2scl_part.bib  odcgcp88.o2  pf_frdm_high.o2  pre-commit  prev_commit.h  prev_commit.txt  thetaANL-1002x12.o2
doc/o2scl/: .gitignore  Makefile.am  ack.dox  acol.dox  algebraic.dox  anneal.dox  cheb.dox  con_min.dox  constants.dox  deriv.dox  design.dox  dev_guide.dox  dl_page.dox  dlayout.xml  dlayout.xml.old  doxyfile  doxyfile.old  ex_compile.dox  examples.dox  extra.css  fit.dox  footer.html  fparser.dox  funct.dox  hdf.dox  header.html  header.tex  header.tex.old  hist.dox  install.dox  inte.dox  interp.dox  license.dox  linalg.dox  lset.dox  main.dox  make_rst.cpp  matrix_out_bkup.rst  mcarlo.dox  mcmc.dox  (+19 more)
examples/: .gitignore  Makefile.am  bm_array.cpp  bm_array2.cpp  bm_deriv.cpp  bm_lu.cpp  bm_min.cpp  bm_mmin.cpp  bm_mroot.cpp  bm_mroot2.cpp  bm_part.cpp  bm_part2.cpp  bm_poly.cpp  bm_polylog.cpp  bm_rk8pd.cpp  bm_rkck.cpp  bm_root.cpp  ex_anneal.cpp  ex_apr_eos.cpp  ex_bps_eos.cpp  ex_bps_input.txt  ex_chebapp.cpp  ex_cnstr.cpp  ex_cold_nstar.cpp  ex_conmin.cpp  ex_const_vec.cpp  ex_contour.cpp  ex_deriv.cpp  ex_diff.cpp  ex_emulator.cpp  ex_eos_crust.cpp  ex_eos_gibbs.cpp  ex_eos_had_apr.cpp  ex_eos_had_rmf.cpp  ex_eos_had_skyrme.cpp  ex_eos_sn.cpp  ex_fermion_summ.cpp  ex_fptr.cpp  ex_fptr.h  ex_gen_sn_eos.cpp  (+34 more)
examples/data/: README.md
examples/old/: bm_deriv.cpp  bm_lu.cpp  bm_mmin.cpp  bm_mroot.cpp  bm_mroot2.cpp  bm_part.cpp  bm_part2.cpp  ex_eos_gibbs_old.cpp  ex_eos_gibbs_old2.cpp  ex_markov.cpp  ex_mcmc_new.cpp  ex_methast.cpp
examples/plot/: .gitignore  Makefile.am  ex_chebapp_plot.cpp  ex_chebapp_plot.eps  ex_chebapp_plot.py  ex_cnstr.out  ex_contour_plot3.eps  ex_eos_had_plot.py  ex_fptr_plot.cpp  ex_fptr_plot.eps  ex_fptr_plot.py  ex_gen_sn_eos_plot.py  ex_mandel_plot.cpp  ex_mmin.eps  ex_mmin_plot.cpp  ex_nuc_plot.cpp  ex_nucmass_ame.eps  ex_nucmass_ame03.eps  ex_nucmass_ame13.eps  ex_nucmass_dz.eps  ex_nucmass_hfb.eps  ex_nucmass_ktuy.eps  ex_nucmass_mn.eps  ex_nucmass_plot.cpp  ex_nucmass_plot.py  ex_nucmass_sm.eps  ex_ode_airy.eps  ex_ode_bessel.eps  ex_ode_bessel2.eps  ex_ode_plot.cpp  ex_ode_plot.py  ex_planar_plot.cpp  ex_stiff_plot.cpp
include/o2scl/: Makefile.am
src/: .gitignore  Makefile.am  acol.cpp  acolm.cpp  acolm.h  python.i
src/anneal/: Makefile.am  anneal.h  anneal_gsl.h  anneal_gsl_ts.cpp  anneal_mt.h  anneal_mt_ts.cpp  anneal_para.h  anneal_para_ts.cpp
src/base/: .gitignore  Makefile.am  auto_format.cpp  auto_format.h  auto_format_ts.cpp  auto_table.cpp  auto_table.h  auto_table_ts.cpp  base.i  base_cuda.cu  base_cuda.h  base_python.cpp  base_python.h  calc_utf8.cpp  calc_utf8.h  calc_utf8_ts.cpp  calculator2.cpp  calculator2.h  cli.cpp  cli.h  cli_readline.h  cli_ts.cpp  columnify.cpp  columnify.h  columnify_ts.cpp  constants.h  constants_ts.cpp  convert_units.cpp  convert_units.h  convert_units_ts.cpp  cuda_invert.cu  cuda_invert.h  cursesw.cpp  cursesw.h  cursesw_ts.cpp  err_hnd.cpp  err_hnd.h  err_hnd_ts.cpp  exception.cpp  exception.h  (+70 more)
src/boost/: Makefile.am  anneal_mt.h  anneal_mt_ts.cpp
src/cubature/: Makefile.am  converged.h  cubature.h  cubature_new.h  cubature_new2.h  cubature_new2_ts.cpp  cubature_new_ts.cpp  cubature_orig.h  cubature_orig_ts.cpp  cubature_ts.cpp  hcubature.cpp  pcubature.cpp
src/deriv/: Makefile.am  deriv.h  deriv_cern.h  deriv_cern_ts.cpp  deriv_eqi.h  deriv_eqi_ts.cpp  deriv_gsl.h  deriv_gsl_ts.cpp  deriv_ts.cpp  vector_derint.h  vector_derint_ts.cpp
src/eos/: .gitignore  Makefile.am  apr_eos.cpp  apr_eos.h  apr_eos_ts.cpp  bag_eos.cpp  bag_eos.h  bag_eos_ts.cpp  bps_eos.cpp  bps_eos.h  bps_eos_ts.cpp  cfl6_eos.cpp  cfl6_eos.h  cfl6_eos_ts.cpp  cfl_njl_eos.cpp  cfl_njl_eos.h  cfl_njl_eos_ts.cpp  cold_nstar.cpp  cold_nstar.h  cold_nstar_ts.cpp  ddc_eos.cpp  ddc_eos.h  ddc_eos_ts.cpp  eos.cpp  eos.h  eos.i  eos_base.cpp  eos_base.h  eos_base_ts.cpp  eos_crust.cpp  eos_crust.h  eos_crust_ts.cpp  eos_crust_virial.cpp  eos_crust_virial.h  eos_crust_virial_ts.cpp  eos_cs2_poly.h  eos_cs2_poly_ts.cpp  eos_had_apr.cpp  eos_had_apr.h  eos_had_apr_ts.cpp  (+162 more)
src/fit/: Makefile.am  fit_base.h  fit_base_ts.cpp  fit_bayes.h  fit_bayes_ts.cpp  fit_fix.h  fit_fix_ts.cpp  fit_linear.h  fit_linear_ts.cpp  fit_min.h  fit_min_ts.cpp  fit_nonlin.h  fit_nonlin_ts.cpp
src/fparser/: Makefile.am  fp_opcode.cpp  fparser.cpp  fparser.h  fparser_ts.cpp  fpaux.h  fpconfig.h  fptypes.h
src/hdf/: .gitignore  Makefile.am  acolm.cpp  acolm.h  acolm_ac.cpp  acolm_df.cpp  acolm_gi.cpp  acolm_jo.cpp  acolm_o2graph.cpp  acolm_ps.cpp  acolm_tz.cpp  cloud_file.cpp  cloud_file.h  hdf.i  hdf_file.cpp  hdf_file.h  hdf_file_ts.cpp  hdf_io.cpp  hdf_io.h  hdf_io_ts.cpp  hdf_io_ts_table.txt  hdf_python.cpp  hdf_python.h
src/inte/: Makefile.am  inte.h  inte_adapt_cern.h  inte_adapt_cern_ts.cpp  inte_cauchy_cern.h  inte_cauchy_cern_ts.cpp  inte_double_exp_boost.h  inte_double_exp_boost_ts.cpp  inte_gauss56_cern.h  inte_gauss56_cern_ts.cpp  inte_gauss_cern.h  inte_gauss_cern_ts.cpp  inte_gen.h  inte_gen_comp.h  inte_gen_comp_ts.cpp  inte_gsl.h  inte_kronrod_boost.h  inte_kronrod_boost_ts.cpp  inte_kronrod_gsl.cpp  inte_kronrod_gsl.h  inte_ld.h  inte_ld_gauss56_cern.h  inte_ld_gauss_cern.h  inte_ld_gauss_cern_ts.cpp  inte_multi.h  inte_multi_comp.h  inte_multi_comp_ts.cpp  inte_qag_gsl.h  inte_qag_gsl_ts.cpp  inte_qagi_gsl.h  inte_qagi_gsl_ts.cpp  inte_qagil_gsl.h  inte_qagil_gsl_ts.cpp  inte_qags_gsl.h  (+16 more)
(+2846 files in other folders)
